--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="stylee2.css">
+    <link rel="stylesheet" href="css/stylee.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -80,53 +80,39 @@
     </div>
     <main>
         <div class="filtr">
-            <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Axtaris et
-                        </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <div class="axtaris">
-                                <form>
-                                    <div class="sections">
-                                        <select>
-                                            <option>Ölkə seçin</option>
-                                        </select>
-                                        <select>
-                                            <option>Site seçin</option>
-                                        </select>
-                                        <select>
-                                            <option>Əmlak növü</option>
-                                        </select>
-                                        <button id="btn1" type="submit">Uyğun variantları göstər</button>
-                                    </div>
-                                    <div class="formtext">
-
-                                        <input type="text" placeholder="Qiymət                  min ">
-                                        <hr />
-                                        <input type="text" placeholder="Qiymət                   max ">
-                                        <select>
-                                            <option>Valyuta</option>
-                                        </select>
-                                        <button id="btn2" type="submit">Axtarış</button>
-                                    </div>
-
-                                    <!-- <div class="buttons">
-                                <button id="btn1" type="submit">Uyğun variantları göstər</button>
-                                <button id="btn2" type="submit">Axtarış</button>
-                            </div> -->
-
-                                </form>
-                            </div>
-                        </div>
+            <div class="axtaris">
+                <form>
+                    <div class="sections">
+                        <select>
+                            <option>Ölkə seçin</option>
+                        </select>
+                        <select>
+                            <option>Site seçin</option>
+                        </select>
+                        <select>
+                            <option>Əmlak növü</option>
+                        </select>
+                        <button id="btn1" type="submit">Uyğun variantları göstər</button>
                     </div>
-                </div>
-            </div>
+                    <div class="formtext">
 
+                        <input type="text" placeholder="Qiymət  min ">
+                        <hr />
+                        <input type="text" placeholder="Qiymət   max ">
+                        <select>
+                            <option>Valyuta</option>
+                        </select>
+                        <button id="btn2" type="submit">Axtarış</button>
+                    </div>
+
+                     <div class="buttons">
+                <button id="btn1" type="submit">Uyğun variantları göstər</button>
+                <button id="btn2" type="submit">Axtarış</button>
+            </div> 
+
+                </form>
+            </div>
+        </div>
             <div class="maintop">
                 <h2>Sizin üçün maraqlı</h2>
                 <p>Kampaniyalarımız, yeniliklərimiz, maraqlı faktlar</p>
@@ -191,10 +177,10 @@
                     <h3>Yeni Əmlak Təklifləri</h3>
                 </div>
                 <div class="block">
-                    <!-- <div class="arrows">
+                     <div class="arrows">
                         <button id="lftbtn"> ‹</button>
                         <button id="rghtbtn">›</button>
-                    </div> -->
+                    </div> 
                     <div class="cardteklif">
                         <div class="teklifimg">
                             <img src="img/silder1.png" alt="">
@@ -210,7 +196,7 @@
                     </div>
                     <div class="cardteklif">
                         <div class="teklifimg">
-                            <img src="img/silder1.png" alt="">
+                            <img src="img/slider2.png" alt="">
                         </div>
                         <div class="tekliftext">
                             <h6>750.000 Azn</h6>
@@ -223,7 +209,7 @@
                     </div>
                     <div class="cardteklif">
                         <div class="teklifimg">
-                            <img src="img/silder1.png" alt="">
+                            <img src="img/slider3.png" alt="" c>
                         </div>
                         <div class="tekliftext">
                             <h6>750.000 Azn</h6>
@@ -236,7 +222,7 @@
                     </div>
                     <div class="cardteklif">
                         <div class="teklifimg">
-                            <img src="img/silder1.png" alt="">
+                            <img src="img/slidrer5.png">
                         </div>
                         <div class="tekliftext">
                             <h6>750.000 Azn</h6>
@@ -250,7 +236,7 @@
                     
                 </div>
 
-        </div>
+        
         </section>
         <section class="sitearasdir">
             <div class="siteblock">
@@ -394,7 +380,7 @@
         <hr class="footerhr">
         <div class="footerbottom">
             <div class="footerbotlogo">
-                <svg width="71" height="63" viewBox="0 0 71 63" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="50" height="40" viewBox="0 0 71 63" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_104_471)">
                         <g clip-path="url(#clip1_104_471)">
                             <path
