--- a/index.htm
+++ b/index.htm
@@ -352,8 +352,8 @@
             </section>
     </main>
     <footer>
-        <div class="footercontainer">
-            <div class="footercard1">
+        <div class="footercontent">
+            <div class="footer-cards">
                 <h5>Faydalı linklər</h5>
                 <a href="#">Sitelər</a>
                 <a href="#">Əmlak al</a>
@@ -362,26 +362,24 @@
                 <a href="#">Biz kimik</a>
                 <a href="#">Kampaniyalar</a>
             </div>
-            <div class="footercard2">
-                <div class="ftcard2text">
-                    <h5>Bizimlə əlaqəyə keçin</h5>
-                    <p>
-                        <i class="fa-solid fa-phone fa-xs"></i>+012 477 77 77 <br>
-                        <i class="fa-solid fa-envelope fa-xs"></i>example@gmail.com <br>
-                        <i class="fa-solid fa-mobile-screen fa-xs"></i>+99455 255 9650 <br>
-                        <i class="fa-solid fa-location-dot fa-xs"></i>Kənar Dairəvi yol 10, Yeni Yasamal,
-                        AZ1070, Bakı, Azərbaycan
+            <div class="footer-cards">
+                <h5>Bizimlə əlaqəyə keçin</h5>
+                <p>
+                    <i class="fa-solid fa-phone fa-xs"></i>+012 477 77 77 <br>
+                    <i class="fa-solid fa-envelope fa-xs"></i>example@gmail.com <br>
+                    <i class="fa-solid fa-mobile-screen fa-xs"></i>+99455 255 9650 <br>
+                    <i class="fa-solid fa-location-dot fa-xs"></i>Kənar Dairəvi yol 10, Yeni Yasamal,<br> AZ1070, Bakı, Azərbaycan
+                </p>
 
-                    </p>
-                </div>
             </div>
-            <div class="socials">
+            <div class="footer-cards">
                 <h5>Bizi sosial şəbəkələrdə izləyin</h5>
                 <div class="socialicons">
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-youtube"></i>
                 </div>
+
             </div>
         </div>
         <hr class="footerhr">
