--- a/test.htm
+++ b/test.htm
@@ -1,306 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
-
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: #F7F7F7;
-        }
-
-        .test {
-            margin: auto;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            flex-wrap: wrap;
+<a href="#">Sitelər</a>
+                <a href="#">Əmlak al</a>
+                <a href="#">Kirayə</a>
+                <a href="#">Kampaniyalar</a>
+                <a href="#">Biz kimik</a>
+                <a href="#">Kampaniyalar</a>
 
 
 
-        }
+                <h5>Bizimlə əlaqəyə keçin</h5>
+                    <p>
+                        <i class="fa-solid fa-phone fa-xs"></i>+012 477 77 77 <br>
+                        <i class="fa-solid fa-envelope fa-xs"></i>example@gmail.com <br>
+                        <i class="fa-solid fa-mobile-screen fa-xs"></i>+99455 255 9650 <br>
+                        <i class="fa-solid fa-location-dot fa-xs"></i>Kənar Dairəvi yol 10, Yeni Yasamal,
+                        AZ1070, Bakı, Azərbaycan
 
-        .satiscard {
-            margin: 25px;
-            display: flex;
-
-            justify-content: center;
-            flex-direction: column;
-            width: 80%;
-            height: auto;
-            background: #fff;
-        }
-
-        /* .cardimg {
-            background: url(img/satis1.png)center/cover;
-            width: 100%;
-            height: 65vh;
-        }
-        .cardimg2 {
-            background: url(img/satis2.png)center/cover;
-            width: 100%;
-            height: 60vh;
-        } */
-
-        .cardimg {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: 50%;
-        }
-
-        .cardimg img {
-            width: 100%;
-            height: 50%;
-            object-fit: cover;
-        }
-
-        .cardtexts {
-            margin: 10px;
-
-        }
-
-        .cardtexts h4 {
-            font: 1em 'Montserrat';
-            font-weight: 500;
-            color: #000;
-        }
-
-        .cardtexts p {
-            font: 11px 'Montserrat';
-            color: #676767;
-
-        }
-
-        .cardicons i {
-            margin: 10px 0;
-            font-size: .5em;
-            padding: 2px;
-        }
-
-        .cardtexts ul {
-            list-style: square;
-            margin: 10px 15px;
-            font-size: 11px;
-            color: #676767;
-        }
-
-        .btn a {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100px;
-            height: 30px;
-            background: #573391;
-            font: 14px 'Montserrat';
-            color: #FFFF;
-            text-decoration: none;
-            border-radius: 3px;
-        }
-        @media only screen and (min-width: 870px){
-            .test {
-                margin: auto;
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-                flex-wrap: wrap;
-
-
-
-
-            }
-        }
-        @media only screen and (min-width: 768px) {
-            .test {
-                margin: auto;
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: row;
-                flex-wrap: nowrap;
-
-
-
-
-            }
-
-            .satisblcok {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: row;
-                margin: auto;
-                width: 100%;
-            }
-
-            .satiscard {
-                margin: 25px;
-                display: flex;
-
-                justify-content: space-between;
-                flex-direction: row;
-                width: 50%;
-                height: auto;
-                background: #fff;
-            }
-
-            .cardimg {
-
-                display: flex;
-
-                align-items: center;
-                justify-content: flex-start;
-                width: 350px;
-                height: 340px;
-            }
-
-            .cardimg img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                float: left;
-            }
-
-            .cardtexts {
-                margin: 10px;
-                width: 80%;
-
-            }
-
-            .cardtexts h4 {
-                font: 1em 'Montserrat';
-                font-weight: 500;
-                color: #000;
-            }
-
-            .cardtexts p {
-                margin: 10px 0;
-                font: .8em 'Montserrat';
-                color: #676767;
-
-            }
-
-            #faiz {
-                margin: 10px 0;
-                font: 1em 'Montserrat';
-                color: #676767;
-
-            }
-
-            .cardicons i {
-                font-size: .8em;
-                padding: 2px;
-            }
-
-            .cardtexts ul {
-                list-style: square;
-                margin: 10px 15px;
-                font-size: .8em;
-                color: #676767;
-            }
-
-           
-
-
-            .btn {
-                display: flex;
-                align-items: flex-end;
-                justify-content: flex-end;
-                float: right;
-                margin: 0 0 0 0;
-            }
-            .cardtexts ol{
-                margin: 5px 0;
-                font-size:1.1em;
-            }
-        }
-    </style>
-</head>
-
-<body>
-    <div class="satisblcok">
-        <div class="test">
-            <div class="satiscard">
-                <div class="cardimg">
-                    <img src="img/satis1.png" alt="">
-                </div>
-                <div class="cardtexts">
-                    <h4>Green City yaşayış
-                        kompleksində villalar
-                        uzunmüddətli icarəyə verilir</h4>
-                    <p>Villaların özəllikləri: <br>
-                    <ul>
-                        <li>Tam təmirli</li>
-                        <li>Sahə: 290m²/450m² </li>
-                        <li> 3 yataq otağı</li>
-                        <li>3 sanitar qovşağı</li>
-                        <li> 1 qapalı qaraj </li>
-                        <li>Həyətyanı parkinq</li>
-                        <li> Həyətyanı sahə: 4-6 sot</li>
-                    </ul>
                     </p>
-                    <div class="cardicons">
-                        <i class="fa-solid fa-bed"> 5 </i>
-                        <i class="fa-solid fa-sink"> 3</i>
-                        <i class="fa-solid fa-maximize"> 250 kv.m. </i>
-                    </div>
 
-                    <div class="btn">
-                        <a href="#"> Ətraflı ➔</a>
-                    </div>
+                    <h5>Bizi sosial şəbəkələrdə izləyin</h5>
+                <div class="socialicons">
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
                 </div>
-            </div>
-            <div class="satiscard">
-                <div class="cardimg">
-                    <img src="img/satis2.png" alt="">
-                </div>
-                <div class="cardtexts">
-                    <h4>Green City yaşayış kompleksi</h4>
-                    <p>20% ilkin ödənişlə illik 6% ilə
-                        10 il müddətinə ipoteka krediti ilə mənzil
-                        sahibi olmaq şansı əldə edin</p>
-                    <p>Dəniz mənzərəli kompleksdə sakinlərin
-                        pulsuz istifadəsinə daxildir: <br>
-                    <ul class="ev2ul">
-                        <li>Açıq və qapalı hovuz</li>
-                        <li>Uşaq və əyləncə mərkəzləri</li>
-                        <li>22 HA yaşıl ərazi</li>
-                        <li>Çimərlik, akvapark▫️Futbol, volleybol, tennis meydançaları</li>
-                        <li>24/7 mühafizə </li>
-                        <ol>50% endirim ilə: </ol>
-                        <li>Çimərlik, akvapark▫️Futbol, volleybol, tennis meydançaları</li>
-                    </ul>
-
-                    </ul>
-                    <!-- ▫️Açıq və qapalı hovuz▫️Uşaq və əyləncə mərkəzləribr <br>
-                        ▫️22 HA yaşıl ərazi <br>
-                        ▫️Çimərlik, akvapark▫️Futbol, volleybol, tennis meydançaları <br>
-                        ▫️24/7 mühafizə <br>
-                        50% endirim ilə:▫Fitnes & Spa mərkəzi</p> -->
-                    <div class="btn">
-                        <a href="#"> Ətraflı ➔</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-
-</html>
