--- a/index.htm
+++ b/index.htm
@@ -29,6 +29,7 @@
               <button onclick="removeHeadline()">X</button>
             </div>
         </div>
+        <nav> 
         <div class="container">
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
