--- a/index.htm
+++ b/index.htm
@@ -92,22 +92,32 @@
                     <div class="sections">
                         <select>
                             <option>Ölkə seçin</option>
+                            <option>Azərbaycan</option>
+                            <option>Türkiyə</option>
                         </select>
                         <select>
                             <option>Site seçin</option>
+                            <option>Royal Park</option>
+                            <option>Green City Residence</option>
+                            <option>Villa Badam</option>
                         </select>
                         <select>
                             <option>Əmlak növü</option>
+                            <option>Mənzillər</option>
+                            <option>Obyektlər və ofislər</option>
+                            <option>Mənzillər(24521)Villalar, bağ evləri</option>
                         </select>
                         <button id="btn1" type="submit">Uyğun variantları göstər</button>
                     </div>
                     <div class="formtext">
 
-                        <input type="text" placeholder="Qiymət  min ">
+                        <input type="number" placeholder="Qiymət  min ">
                         <hr />
-                        <input type="text" placeholder="Qiymət   max ">
+                        <input type="number" placeholder="Qiymət   max ">
                         <select>
                             <option>Valyuta</option>
+                            <option>Azərbaycan manatı</option>
+                            <option>ABŞ dolları</option>
                         </select>
                         <button id="btn2" type="submit">Axtarış</button>
                     </div>
