--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav text-center  mx-auto mb-2 mb-lg-0">
                             <li class="nav-item ">
-                                <a class="nav-link active" aria-current="page" href="#" id="a1">Sitelər</a>
+                                <a class="nav-link active" aria-current="page" href="pages/siteler.htm" id="a1">Sitelər</a>
                             </li>
 
                             <li class="nav-item">
