--- a/pages/siteler.htm
+++ b/pages/siteler.htm
@@ -165,8 +165,8 @@
                 <div class="cards">
                     <div class="cards-top">
                         <img src="../img/silder1.png" alt="">
-                       <!-- <span id="qiymet"><p>Sitelər
-                        min 45 560 AZN - dən</p></span> -->
+                       <span id="qiymet"><p>Sitelər
+                        min 45 560 AZN - dən</p></span>
                     </div>
                     <div class="cards-content">
                        <h5>Royal Park Villa</h5>
@@ -181,8 +181,8 @@
                 </div>
                 <div class="cards">
                     <div class="cards-top">
-                        <!-- <span id="qiymet"><p>Sitelər
-                            min 45 560 AZN - dən</p></span> -->
+                        <span id="qiymet"><p>Sitelər
+                            min 45 560 AZN - dən</p></span>
                         <img src="../img/silder1.png" alt="">
                     </div>
                     <div class="cards-content">
@@ -198,8 +198,8 @@
                 </div>
                 <div class="cards">
                     <div class="cards-top">
-                        <!-- <span id="qiymet"><p>Sitelər
-                            min 45 560 AZN - dən</p></span> -->
+                        <span id="qiymet"><p>Sitelər
+                            min 45 560 AZN - dən</p></span>
                         <img src="../img/silder1.png" alt="">
                     </div>
                     <div class="cards-content">
@@ -215,8 +215,8 @@
                 </div>
                 <div class="cards">
                     <div class="cards-top">
-                        <!-- <span id="qiymet"><p>Sitelər
-                            min 45 560 AZN - dən</p></span> -->
+                        <span id="qiymet"><p>Sitelər
+                            min 45 560 AZN - dən</p></span>
                         <img src="../img/silder1.png" alt="">
                     </div>
                     <div class="cards-content">
@@ -232,8 +232,8 @@
                 </div>
                 <div class="cards">
                     <div class="cards-top">
-                        <!-- <span id="qiymet"><p>Sitelər
-                            min 45 560 AZN - dən</p></span> -->
+                        <span id="qiymet"><p>Sitelər
+                            min 45 560 AZN - dən</p></span>
                         <img src="../img/silder1.png" alt="">
                     </div>
                     <div class="cards-content">
@@ -249,8 +249,8 @@
                 </div>
                 <div class="cards">
                     <div class="cards-top">
-                        <!-- <span id="qiymet"><p>Sitelər
-                            min 45 560 AZN - dən</p></span> -->
+                        <span id="qiymet"><p>Sitelər
+                            min 45 560 AZN - dən</p></span>
                         <img src="../img/silder1.png" alt="">
                     </div>
                     <div class="cards-content">
@@ -266,8 +266,8 @@
                 </div>
                 <div class="cards">
                     <div class="cards-top">
-                        <!-- <span id="qiymet"><p>Sitelər
-                            min 45 560 AZN - dən</p></span> -->
+                        <span id="qiymet"><p>Sitelər
+                            min 45 560 AZN - dən</p></span>
                         <img src="../img/silder1.png" alt="">
                     </div>
                     <div class="cards-content">
