--- a/pages/siteler.htm
+++ b/pages/siteler.htm
@@ -23,7 +23,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="Logo" height="60"></a>
+                        <a class="navbar-brand" href="../index.htm"><img src="../img/logo.png" alt="Logo" height="60"></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
